# rust-lang

./: Cargo.toml  Dockerfile  cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/layouts/: 403.html  404.html  confirm_email.html  confirm_email_verify.html  confirm_id.html  confirm_id_verify.html  confirm_phone.html  confirm_phone_verify.html  signin.html  signup.html
src/layouts/partials/: footer.html  header.html
static/assets/css/: style.min.css
