[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
tera = "1"
tower-http = { version = "0.4.0", features = ["full"] }
mongodb = "2.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
lettre = { version = "0.10", features = ["Tokio1Executor"] }